# Rudra-PoC

./: .gitignore  DEV.md  Memo.md  README.md  REPORTING.md  config.toml.template  poc.py  setup.sh  stat.py  std-bugs.csv  std-bugs.md  test_all_poc.py  uninit_read_advisory_template.md  uninit_read_rustsec_template.md  uninit_read_template.md
ci/: build_cli.sh  setup_toolchains.sh
cli/: Cargo.toml
cli/src/: add.rs  cmd.rs  common.rs  git.rs  main.rs  poc.rs  prelude.rs  run.rs  util.rs
cli/src/cmd/: add.rs  generate.rs  prioritize.rs  report.rs  run.rs  sync.rs  update.rs
cli/templates/: README.md  new_poc.rs  new_poc_boilerplate.rs
cli/templates/generate/: advisory.md  issue.md  issue_body.md  rustsec-direct-issue.md  rustsec-issue.md
cli/templates/poc-debug/: Cargo.toml
cli/templates/workspace/: Cargo.toml  build.rs
dependencies/: libalpm.so.10  libalpm.so.10.0.2
paper/: .gitignore  README.md  common.py  count_bugs.py  count_by_rank.py  count_cve.py  count_tp.py  export_cve.py  generate_table.py  log_analyzer.py  metadata.csv  recreate_bugs.py  requirements.txt  rustsec_list.csv  rustsec_list.py  rustsec_list_annotated.csv  rustsec_list_counter.py  rustsec_list_gen.py  tally_bugs.py  verify.py  verify_poc_version.py
poc/: 0000-rulinalg.rs  0001-http.rs  0002-http.rs  0003-ozone.rs  0004-rocket.rs  0005-failure.rs  0006-alpm-rs.rs  0007-alg_ds.rs  0008-arr.rs  0009-chunky.rs  0010-crayon.rs  0011-obstack.rs  0012-ordnung.rs  0013-simple-slab.rs  0014-sized-chunks.rs  0015-atom.rs  0016-stack.rs  0017-array-queue.rs  0018-dync.rs  0019-futures.rs  0020-beef.rs  0021-futures-intrusive.rs  0022-atomic-option.rs  0023-convec.rs  0024-lock_api.rs  0025-im.rs  0026-may_queue.rs  0027-libsbc.rs  0028-lever.rs  0029-abox.rs  0029-lexer.rs  0030-cache.rs  0031-abox.rs  0032-conqueue.rs  0033-hashconsing.rs  0034-model.rs  0035-late-static.rs  0036-bunch.rs  0037-concread.rs  0038-parc.rs  (+133 more)
stdlib-analysis/: report-lib-rudra-xargo-alloc  report-lib-rudra-xargo-core  (+1 more)
unreported/: bus.toml  (+126 more)
(+1480 files in other folders)
