[package]
name = "rudra-poc"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = "0.10"
git2 = "0.13"
regex = "1"
reqwest = { version = "0.10", features = ["blocking"] }
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tempdir = "0.3.7"
toml = "0.5.7"
once_cell = "1.5"
