[package]
name = "rudra-poc-{{ poc_id }}"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logging-allocator = "0.1.1"
log = "0.4"
{{ metadata.target.krate }} = "={{ metadata.target.version }}"
{% for peer in metadata.target.peer_dependencies -%}
{{ peer }}
{% endfor %}
